--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,5 @@ install:
 script:
   - yarn lint
   - yarn test
-  - apollo schema:check --key="$APOLLO_TOKEN" --endpoint="http://localhost:4000/graphql"
+  - yarn start &
+  - apollo schema:check
