--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
   "name": "ttt",
   "private": true,
+  "version": "1.0.0",
   "scripts": {
-    "test": "echo test",
-    "lint": "echo lint",
-    "start": "echo start"
+    "test": "jest",
+    "lint": "eslint"
   },
   "dependencies": {
     "react": "^16.0.0"
   },
   "devDependencies": {
-    "eslint": "^4.19.1"
-  }
+    "eslint": "^4.19.1",
+    "husky": "^0.14.3",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^23.5.0",
+    "lerna": "^3.0.0-rc.0",
+    "lint-staged": "^7.2.0",
+    "prettier": "^1.14.0"
+  },
+  "workspaces": [
+    "packages/one",
+    "packages/two"
+  ]
 }
