--- a/packages/two/package.json
+++ b/packages/two/package.json
@@ -1,5 +1,8 @@
 {
   "name": "two",
-  "dependencies": {},
+  "version": "1.0.0",
+  "dependencies": {
+    "one": "1.0.0"
+  },
   "devDependencies": {}
 }
