--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "test": "jest",
-    "lint": "eslint"
+    "lint": "eslint ./"
   },
   "dependencies": {
     "react": "^16.0.0"
