--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "test": "jest && codecov",
+    "test": "jest --testResultsProcessor='./node_modules/jest-junit-reporter'",
     "lint": "eslint ./"
   },
   "dependencies": {
@@ -19,6 +19,7 @@
     "husky": "^0.14.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^23.5.0",
+    "jest-junit-reporter": "1.1.0",
     "lerna": "^3.0.0-rc.0",
     "lint-staged": "^7.2.0",
     "prettier": "^1.14.0"
